compiler/tests/fa/errors/pure_impure_call_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
تابع چاپگر(x : صحیح) : صحیح:
    چاپ(x)
    بازگشت x
پایان

خالص تابع دوبرابر(x : صحیح) : صحیح:
    بازگشت چاپگر(x) * 2
پایان

تابع اصلی:
    چاپ(دوبرابر(3))
پایان
